--- a/app/src/main/res/layout/row_task_list.xml
+++ b/app/src/main/res/layout/row_task_list.xml
@@ -21,6 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="@string/descricao"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/image_task"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,7 +33,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/prioridade"
-        android:textStyle="bold"
+        android:textStyle="italic"
         app:layout_constraintStart_toEndOf="@id/image_task"
         app:layout_constraintTop_toBottomOf="@id/text_description" />
 
